# metamorph

./: .gitignore  Cargo.toml  README.md  REUSE.toml  deny.toml  flake.nix  justfile  rustfmt.toml
.config/: rust-toolchain.toml
.github/workflows/: flake.yml  no-merge-commits.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/metamorph/: Cargo.toml  build.rs
crates/metamorph/src/: cli.rs  data.rs  main.rs  morph.rs
crates/workspace-hack/: Cargo.toml
